[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/stickman_run.png" type="Texture" id=1]
[ext_resource path="res://scenes/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://assets/sword_swing.png" type="Texture" id=3]
[ext_resource path="res://assets/combo_2.png" type="Texture" id=4]
[ext_resource path="res://assets/combo_3.png" type="Texture" id=5]
[ext_resource path="res://assets/roll.png" type="Texture" id=6]
[ext_resource path="res://assets/jumping.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 36, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 36, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 36, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "combo2",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "roll",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "combo3",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 4.53661
height = 13.0216

[sub_resource type="CapsuleShape2D" id=24]
radius = 3.34342
height = 0.708132

[sub_resource type="CapsuleShape2D" id=25]
height = 2.43384

[sub_resource type="CapsuleShape2D" id=26]
radius = 4.78216
height = 7.21698

[sub_resource type="CapsuleShape2D" id=27]
radius = 15.3672
height = 0.506409

[sub_resource type="CapsuleShape2D" id=28]
radius = 6.17855
height = 3.921

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 22 )
animation = "idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.022976, 5.24066 )
shape = SubResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.134338, 12.5906 )
shape = SubResource( 24 )

[node name="combo_timer" type="Timer" parent="."]

[node name="combo_3" type="Area2D" parent="."]

[node name="combo3_collision" type="CollisionShape2D" parent="combo_3"]
position = Vector2( 7.06091, 1.33786 )
shape = SubResource( 25 )
disabled = true

[node name="combo3_collision2" type="CollisionShape2D" parent="combo_3"]
position = Vector2( -2.15544, 7.20957 )
rotation = 1.57079
shape = SubResource( 26 )
disabled = true

[node name="combo_1" type="Area2D" parent="."]

[node name="combo1_collision" type="CollisionShape2D" parent="combo_1"]
position = Vector2( 2.66584, 2.53047 )
shape = SubResource( 27 )
disabled = true

[node name="combo_2" type="Area2D" parent="."]

[node name="combo2_collision" type="CollisionShape2D" parent="combo_2"]
position = Vector2( 9.54091, 2.66585 )
rotation = -1.15359
shape = SubResource( 28 )
disabled = true

[node name="roll_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="combo_timer" to="." method="_on_combo_timer_timeout"]
[connection signal="timeout" from="roll_timer" to="." method="_on_roll_timer_timeout"]
